Small layout correction.

--- a/EtAlii.CryptoMagic/Trading/OneOff/OneOffProgressDashboard.razor
+++ b/EtAlii.CryptoMagic/Trading/OneOff/OneOffProgressDashboard.razor
@@ -6,7 +6,7 @@
 @inject ApplicationContext _applicationContext
 
 <Heading Margin="DefaultLayout.Margin">
-    <Icon IconName="@("fa-chart-line")"/> One-off tradings: Progress
+    <Icon IconName="@("fa-chart-line")"/> One-off tradings
 </Heading>
 
 @if (_applicationContext.IsOperational)
