Fixed Rider warnings.

--- a/EtAlii.CryptoMagic/Shared/Configuration/Settings.razor
+++ b/EtAlii.CryptoMagic/Shared/Configuration/Settings.razor
@@ -2,7 +2,7 @@
 
 @namespace EtAlii.CryptoMagic
 
-@inject IJSRuntime _jsRuntime;
+@* @inject IJSRuntime _jsRuntime; *@
 @inject ApplicationContext _applicationContext;
 
 <Validations @ref="_validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@_editContext">
