--- a/EtAlii.CryptoMagic/Trading/Dashboard.razor
+++ b/EtAlii.CryptoMagic/Trading/Dashboard.razor
@@ -2,7 +2,7 @@
 
 @namespace EtAlii.CryptoMagic
 
-@inject AlgorithmManager _algorithmManager
+@* @inject AlgorithmManager _algorithmManager *@
 
 <Row>
     <Column ColumnSize="DefaultLayout.ItemDashboardColumnWidth">
