--- a/EtAlii.CryptoMagic/Trading/Experimental/ExperimentalView.razor
+++ b/EtAlii.CryptoMagic/Trading/Experimental/ExperimentalView.razor
@@ -2,7 +2,7 @@
 
 @namespace EtAlii.CryptoMagic
 
-@inject AlgorithmManager _algorithmManager
+@* @inject AlgorithmManager _algorithmManager *@
 
 <ul class="nav nav-tabs">
 @foreach (var experiment in _experiments)
