--- a/EtAlii.CryptoMagic/Trading/OneOff/OneOffProgressDashboard.razor
+++ b/EtAlii.CryptoMagic/Trading/OneOff/OneOffProgressDashboard.razor
@@ -2,7 +2,7 @@
 
 @namespace EtAlii.CryptoMagic
 
-@inject AlgorithmManager _algorithmManager
+@* @inject AlgorithmManager _algorithmManager *@
 @inject ApplicationContext _applicationContext
 
 <Heading Margin="DefaultLayout.Margin">
